--- a/index.html
+++ b/index.html
@@ -15,29 +15,34 @@
             <img src="" alt="">
         </div>
         <div class="baniere-text">
-            <h1>Katexe est un site pour avoir des comptes gratuitement de tout genre</h1>
+            <h1>Katexe est un site pour avoir des comptes gratuitement en tout genre</h1>
             <p></p>
         </div>
         <div class="baniere_btn">
-            <a href="Voici-un-dev-flemmard"> <span></span> Generé</a>
-            <a href="https://discord.gg/rTxHMeGAmZ"> <span></span> Discord</a>
+            <a href="gen.html"> <span></span>Generé</a>
+            <a href="https://discord.gg/rTxHMeGAmZ" target="_blank"> <span></span >Discord</a>
         </div>
     </section>
     
 
   <div class="container-first">
-      <h1><span>ℬ𝓘𝓔𝓝𝓥𝓔𝓝𝓤𝓔ㅤㅤ</span><span>𝓢𝓤ℛㅤ</span><span>𝓚𝓐𝓣𝓔𝓧𝓔</span></h1>
+      <h1><span>ℬ𝓘𝓔𝓝𝓥𝓔𝓝𝓤𝓔ㅤㅤㅤㅤㅤㅤㅤㅤㅤ</span><span>𝓢𝓤ℛㅤ</span><span>𝓚𝓐𝓣𝓔𝓧𝓔</span></h1>
   </div>
 
-  <img src="Font\Katexelogo.png" class="logo">
+  <img src="https://image.noelshack.com/fichiers/2022/07/3/1645040844-katexelogo.png" class="logo">
 
+  <i class="fa-brands fa-instagram"></i>
 
   <ul class="medias">
-      <li class="bulle"> <a href=""> <img src="Font\github.svg" class="logo-medias"> </a></li>
-      <li class="bulle"> <a href="https://github.com"></a> <img src="Font\instagram.png" class="logo-medias"> </a></li>
-      <li class="bulle"> <a href="https://github.com"></a> <img src="Font\twitter.png" class="logo-medias"> </a></li>
-      <li class="bulle"> <a href="agentCrafteur289"></a> <img src="Font\discord.svg" class="logo-medias"> </a></li>
+      <li class="bulle"> <a href="https://github.com/agentCrafteur289" target="_blank"> <img src="https://image.noelshack.com/fichiers/2022/07/3/1645041334-github.png" class="logo-medias"> </a></li>
+      <li class="bullos"> <a href="https://www.instagram.com" target="_blank"></a> <img src="https://image.noelshack.com/fichiers/2022/07/3/1645040840-instagram.png" class="logo-medias"> </a></li>
+      <li class="bulle"> <a href="#" target="_blank"></a> <img src="https://image.noelshack.com/fichiers/2022/07/3/1645040847-twitter.png" class="logo-medias"> </a></li>
+      <li class="bulle"> <a href="#" target="_blank"></a> <img src="https://image.noelshack.com/fichiers/2022/07/3/1645041337-discord.png" class="logo-medias"> </a></li>
   </ul>
+
+  <ul class="medias1">
+    <li class="bullos"> <a href="https://www.instagram.com" target="_blank" ></a> <img src="Font\instagram.png" class="logo-medias"> </a></li>
+</ul>
 
 
 
