--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>Katexe est un site pour avoir des comptes gratuitement en tout genre</h1>
             <p></p>
         </div>
-        <div class="btnarcenciel">
+        <div class="btngen">
             <a href="gen.html"> <span></span>Generé</a> 
         </div>
         <div class="baniere_btn">
@@ -39,14 +39,11 @@
 
   <ul class="medias">
       <li class="bulle"> <a href="https://github.com/agentCrafteur289" target="_blank"> <img src="https://image.noelshack.com/fichiers/2022/07/3/1645041334-github.png" class="logo-medias"> </a></li>
-      <li class="bullos"> <a href="https://www.instagram.com" target="_blank"></a> <img src="https://image.noelshack.com/fichiers/2022/07/3/1645040840-instagram.png" class="logo-medias"> </a></li>
+      <li class="bulle"> <a href="https://www.instagram.com" target="_blank"></a> <img src="https://image.noelshack.com/fichiers/2022/07/3/1645040840-instagram.png" class="logo-medias"> </a></li>
       <li class="bulle"> <a href="#" target="_blank"></a> <img src="https://image.noelshack.com/fichiers/2022/07/3/1645040847-twitter.png" class="logo-medias"> </a></li>
       <li class="bulle"> <a href="#" target="_blank"></a> <img src="https://image.noelshack.com/fichiers/2022/07/3/1645041337-discord.png" class="logo-medias"> </a></li>
   </ul>
 
-  <ul class="medias1">
-    <li class="bullos"> <a href="https://www.instagram.com" target="_blank" ></a> <img src="https://image.noelshack.com/fichiers/2022/07/3/1645040840-instagram.png" class="logo-medias"> </a></li>
-</ul>
 
 
 
