--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
 </div>
 
 <div class="btninvisibleinsta">
-    <a href="https://www.instagram.com" target="_blank"> <span></span>ㅤㅤㅤ</a>
+    <a href="https://www.instagram.com" target="_blank"> <span></span>ㅤㅤ</a>
     </div>
 
     <div class="btninvisibletwitter">
-        <a href="https://twitter.com/ACrafteur" target="_blank"> <span></span>ㅤㅤㅤ</a>
+        <a href="https://twitter.com/ACrafteur" target="_blank"> <span></span>ㅤㅤ</a>
         </div>
 
         <div class="btninvisiblediscord">
-            <a href="https://discord.com/invite/rTxHMeGAmZ" target="_blank"> <span></span>ㅤㅤㅤ</a>
+            <a href="https://discord.com/invite/rTxHMeGAmZ" target="_blank"> <span></span>ㅤㅤ</a>
             </div>
 
   </body>
