--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <label for="switch" class="btngen"> <a href="gen.html">Generé</a></label>
   
 <div class="btninvisible">
-<a href="gen.html"> <span></span>AAAAA</a>
+<a href="gen.html"><span></span>ㅤㅤㅤㅤ</a>
 </div>
 
 <div class="btninvisibleinsta">
