--- a/index.html
+++ b/index.html
@@ -35,37 +35,37 @@
 
 
   <ul class="medias">
-      <li class="bulle"> <a href="https://github.com/agentCrafteur289" target="_blank"> <img src="https://image.noelshack.com/fichiers/2022/07/3/1645041334-github.png" class="logo-medias"> </a></li>
-      <li class="bulle"> <a href="https://www.instagram.com" target="_blank"></a> <img src="https://image.noelshack.com/fichiers/2022/07/3/1645040840-instagram.png" class="logo-medias"> </a></li>
-      <li class="bulle"> <a href="ok" target="_blank"></a> <img src="https://image.noelshack.com/fichiers/2022/07/3/1645040847-twitter.png" class="logo-medias"> </a></li>
-      <li class="bulle"> <a href="test" target="_blank"></a> <img src="https://image.noelshack.com/fichiers/2022/07/3/1645041337-discord.png" class="logo-medias"> </a></li>
+      <li class="bulle">
+        <a href="https://github.com/agentCrafteur289" target="_blank"> 
+            <img src="https://image.noelshack.com/fichiers/2022/07/3/1645041334-github.png" class="logo-medias">
+        </a>
+    </li>
+      <li class="bulle">
+        <a href="https://www.instagram.com" target="_blank">
+            <img src="https://image.noelshack.com/fichiers/2022/07/3/1645040840-instagram.png" class="logo-medias">
+        </a>
+    </li>
+      <li class="bulle">
+        <a href="https://twitter.com/ACrafteur" target="_blank">
+            <img src="https://image.noelshack.com/fichiers/2022/07/3/1645040847-twitter.png" class="logo-medias">
+        </a>
+    </li>
+      <li class="bulle">
+        <a href="https://discord.com/invite/rTxHMeGAmZ" target="_blank">
+            <img src="https://image.noelshack.com/fichiers/2022/07/3/1645041337-discord.png" class="logo-medias">
+        </a>
+    </li>
   </ul>
 
 
 
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
-  <script src="script.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script> -->
+  <!-- <script src="script.js"></script> -->
 
 
 
-  <label for="switch" class="btngen"> <a href="gen.html">Generé</a></label>
-  
-<div class="btninvisible">
-<a href="gen.html"><span></span>ㅤㅤㅤㅤ</a>
-</div>
-
-<div class="btninvisibleinsta">
-    <a href="https://www.instagram.com" target="_blank"> <span></span>ㅤㅤ</a>
-    </div>
-
-    <div class="btninvisibletwitter">
-        <a href="https://twitter.com/ACrafteur" target="_blank"> <span></span>ㅤㅤ</a>
-        </div>
-
-        <div class="btninvisiblediscord">
-            <a href="https://discord.com/invite/rTxHMeGAmZ" target="_blank"> <span></span>ㅤㅤ</a>
-            </div>
+  <a href="gen.html" class="btngen">Generé</a>
 
   </body>
   </html>
