--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h1><span>Bienvenue </span><span>sur </span><span>katexe</span></h1>
   </div>
 
-  <img src="https://image.noelshack.com/fichiers/2022/07/3/1645040844-katexelogo.png" class="logo">
+  <img src=" katexe/Katexelogo.png" class="logo">
 
 
   <ul class="medias">
